--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,19 @@
         </div>
     </div>
 
+
+    <div class="blackfriday22-all">
+        <div class="blackfriday22-all__body">
+            <figure class="blackfriday22-all__figure">
+                <img src="./img/all-big.svg" width="472" height="442" alt="">
+            </figure>
+            <div class="blackfriday22-all__content">
+                <p>Успевайте приобрести товары со&nbsp;скидкой&nbsp;30% на&nbsp;сайте или в&nbsp;магазинах &laquo;Галамарт&raquo; в&nbsp;Черную пятницу. Самая любимая покупателями распродажа продлится один день 25&nbsp;ноября.<br>
+                    Выбирайте понравившиеся товары для себя и&nbsp;близких: вы&nbsp;точно найдете что-то уютное, нужное или о&nbsp;чем давно мечтали!</p>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="remodal" data-remodal-id="modal-action">
     <button data-remodal-action="close" class="remodal-close"></button>
