--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,55 @@
         </div>
     </div>
 
+    <div class="blackfriday22-block">
+        <div class="blackfriday22-block__body">
+            <figure class="blackfriday22-block__figure">
+                <img class="img-fluid" src="./img/block1.png" width="1000" height="647" alt="">
+                <div class="blackfriday22-block__label">
+                    <a href="#" class="blackfriday22-block__btn label-1 bottom-left">Инструменты</a>
+                    <a href="#" class="blackfriday22-block__btn label-2 top-right">Ароматизаторы</a>
+                    <a href="#" class="blackfriday22-block__btn label-3 bottom-right">Бытовая техника</a>
+                    <a href="#" class="blackfriday22-block__btn label-4 top-left">Посуда</a>
+                    <a href="#" class="blackfriday22-block__btn label-5 bottom-left">Сантехника</a>
+                </div>
+            </figure>
+            <div class="blackfriday22-block__category blackfriday22-category">
+                <div class="blackfriday22-category__body">
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-2-1.png" width="153"  alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Посуда</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-2-2.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Инструменты</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-2-3.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Ароматизаторы</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-2-4.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Сантехника</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-2-5.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Бытовая техника</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="blackfriday22-quotes">
         <div class="blackfriday22-quotes__body">
             <figure class="blackfriday22-quotes__figure">
@@ -57,7 +106,51 @@
         </div>
     </div>
 
-
+    <div class="blackfriday22-block">
+        <div class="blackfriday22-block__body">
+            <figure class="blackfriday22-block__figure"></figure>
+            <div class="blackfriday22-category">
+                <div class="blackfriday22-category__body">
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-1.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Канцтовары</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-2.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Автотовары</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-3.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Электроника</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-4.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Туризм и рыбалка</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-5.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Спорт и отдых</div>
+                    </div>
+                    <div class="blackfriday22-category__item">
+                        <figure class="blackfriday22-category__figure">
+                            <img class="img-fluid" src="./img/block-1-6.png" width="153" height="149" alt="">
+                        </figure>
+                        <div class="blackfriday22-category__name">Новый год</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="blackfriday22-all">
         <div class="blackfriday22-all__body">
             <figure class="blackfriday22-all__figure">
