--- a/src/index.html
+++ b/src/index.html
@@ -51,40 +51,40 @@
             <figure class="blackfriday22-block__figure">
                 <img class="img-fluid" src="./img/block1.png" width="1000" height="647" alt="">
                 <div class="blackfriday22-block__label">
-                    <a href="https://galamart.ru/collections/posuda-bf/" target="_blank" class="blackfriday22-block__btn label-1 bottom-left">Инструменты</a>
-                    <a href="https://galamart.ru/collections/instrumenty-bf/" target="_blank" class="blackfriday22-block__btn label-2 top-right">Ароматизаторы</a>
-                    <a href="https://galamart.ru/collections/aromatizatory-bf/" target="_blank" class="blackfriday22-block__btn label-3 bottom-right">Бытовая техника</a>
-                    <a href="https://galamart.ru/collections/santekhnika-bf/" target="_blank" class="blackfriday22-block__btn label-4 top-left">Посуда</a>
-                    <a href="https://galamart.ru/collections/bytovaya-tekhnika-bf/" target="_blank" class="blackfriday22-block__btn label-5 bottom-left">Сантехника</a>
+                    <a href="https://galamart.ru/collections/posuda-bf/" target="_blank" data-id="1" class="blackfriday22-block__btn label-1 bottom-left">Инструменты</a>
+                    <a href="https://galamart.ru/collections/instrumenty-bf/" target="_blank"  data-id="2" class="blackfriday22-block__btn label-2 top-right">Ароматизаторы</a>
+                    <a href="https://galamart.ru/collections/aromatizatory-bf/" target="_blank"  data-id="3" class="blackfriday22-block__btn label-3 bottom-right">Бытовая техника</a>
+                    <a href="https://galamart.ru/collections/santekhnika-bf/" target="_blank"  data-id="4" class="blackfriday22-block__btn label-4 top-left">Посуда</a>
+                    <a href="https://galamart.ru/collections/bytovaya-tekhnika-bf/" target="_blank"  data-id="5" class="blackfriday22-block__btn label-5 bottom-left">Сантехника</a>
                 </div>
             </figure>
             <div class="blackfriday22-block__category blackfriday22-category">
                 <div class="blackfriday22-category__body">
-                    <a href="https://galamart.ru/collections/posuda-bf/" target="_blank" class="blackfriday22-category__item">
+                    <a href="https://galamart.ru/collections/posuda-bf/" target="_blank" data-catalog="1" class="blackfriday22-category__item">
                         <figure class="blackfriday22-category__figure">
                             <img class="img-fluid" src="./img/block-2-1.png" width="153"  alt="">
                         </figure>
                         <div class="blackfriday22-category__name">Посуда</div>
                     </a>
-                    <a href="https://galamart.ru/collections/instrumenty-bf/" target="_blank" class="blackfriday22-category__item">
+                    <a href="https://galamart.ru/collections/instrumenty-bf/" target="_blank" data-catalog="2" class="blackfriday22-category__item">
                         <figure class="blackfriday22-category__figure">
                             <img class="img-fluid" src="./img/block-2-2.png" width="153" height="149" alt="">
                         </figure>
                         <div class="blackfriday22-category__name">Инструменты</div>
                     </a>
-                    <a href="https://galamart.ru/collections/aromatizatory-bf/" target="_blank" class="blackfriday22-category__item">
+                    <a href="https://galamart.ru/collections/aromatizatory-bf/" target="_blank" data-catalog="3" class="blackfriday22-category__item">
                         <figure class="blackfriday22-category__figure">
                             <img class="img-fluid" src="./img/block-2-3.png" width="153" height="149" alt="">
                         </figure>
                         <div class="blackfriday22-category__name">Ароматизаторы</div>
                     </a>
-                    <a href="https://galamart.ru/collections/santekhnika-bf/" target="_blank" class="blackfriday22-category__item">
+                    <a href="https://galamart.ru/collections/santekhnika-bf/" target="_blank" data-catalog="4" class="blackfriday22-category__item">
                         <figure class="blackfriday22-category__figure">
                             <img class="img-fluid" src="./img/block-2-4.png" width="153" height="149" alt="">
                         </figure>
                         <div class="blackfriday22-category__name">Сантехника</div>
                     </a>
-                    <a href="https://galamart.ru/collections/bytovaya-tekhnika-bf/" target="_blank" class="blackfriday22-category__item">
+                    <a href="https://galamart.ru/collections/bytovaya-tekhnika-bf/" target="_blank" data-catalog="5" class="blackfriday22-category__item">
                         <figure class="blackfriday22-category__figure">
                             <img class="img-fluid" src="./img/block-2-5.png" width="153" height="149" alt="">
                         </figure>
@@ -242,7 +242,7 @@
 
 <!-- JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"></script>
 <script src="js/blackfriday22.js"></script>
 </body>
 
